updated header text

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- This is a comment -->
     <header>
       <img src="images/one.jpeg" alt="headshot">
-      <h1>Lauren Ahn</h1>
+      <h1>BLAH</h1>
     </header>
     <div class="main-content">
       <div>
