--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     <div class="main-content">
       <div>
         <ul>
-          <li><a href="#">Facebook</a></li>
-          <li><a href="#">LinkedIn</a></li>
-          <li><a href="#">Github</a></li>
-          <li><a href="#">My Resume</a></li>
+          <li class="social"><a href="social">Facebook</a></li>
+          <li class="social"><a href="social">LinkedIn</a></li>
+          <li class="social"><a href="social">Github</a></li>
+          <li class="social"><a href="resume.html">My Resume</a></li>
         </ul>
       </div>
       <div>
